--- a/Demo_Test/SearchPage.xaml
+++ b/Demo_Test/SearchPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Demo"
+    xmlns:cvt="using:Demo.Converter"
     xmlns:dvm="using:Demo.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,6 +12,7 @@
     d:DataContext="{d:DesignInstance Type=dvm:SearchPageViewModel,IsDesignTimeCreatable=True}">
 
     <Page.Resources>
+        <cvt:ImageSourceConverter x:Name="ImageSource"/>
         <SolidColorBrush x:Key="FontColor" 
                          Color="{Binding ThemeColor.FontColor.Color}"/>
         <Storyboard x:Name="searchStartAnimation">
@@ -22,6 +24,9 @@
         </Storyboard>
     </Page.Resources>
     <Grid>
+        <ProgressRing Height="50" Width="50"
+                      VerticalAlignment="Center"
+                      IsActive="{Binding IsActive}"/>
         <StackPanel>
             <Grid Padding="1.2"
                   Margin="0 3" Height="40"
@@ -83,7 +88,7 @@
                        Margin="0 8"
                        Source="ms-appx:///Assets/Res/Search_image1.png"/>
             </Border>
-            <Grid>
+            <StackPanel>
                 <ListView Margin="0" Padding="0"
                           ItemsSource="{Binding Path=DayObject}"
                           IsItemClickEnabled="True" 
@@ -122,10 +127,149 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-            </Grid>
+                <ListView Margin="0" Padding="0"
+                          ItemsSource="{Binding Path=ReadingOC}"
+                          IsItemClickEnabled="True" 
+                          ItemClick="ListView_ItemClick">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border Margin="3 2">
+                                <Grid Height="24">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Grid.Column="0" Padding="2">
+                                        <Image Source="{Binding PageType,Converter={StaticResource ImageSource}}"/>
+                                    </Border>
+                                    <Border Grid.Column="1">
+                                        <TextBlock Grid.Row="0" Margin="7 2"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Left"
+                                                   Text="{Binding Title}"
+                                                   FontSize="14"
+                                                   FontFamily="Consolas"
+                                                   FontWeight="Bold"
+                                                   Foreground="{ThemeResource FontColor}"/>
+                                    </Border>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView Margin="0" Padding="0"
+                          ItemsSource="{Binding Path=MusicOC}"
+                          IsItemClickEnabled="True" 
+                          ItemClick="ListView_ItemClick">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border Margin="0 2">
+                                <Grid Height="68">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Margin="0 0 2 0" Grid.Column="0">
+                                        <Image Source="{Binding Cover}"/>
+                                    </Border>
+                                    <Grid Grid.Column="1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition />
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Grid.Row="0" Margin=" 5 2"
+                                           VerticalAlignment="Center"
+                                           Text="{Binding Title}"
+                                           FontSize="14"
+                                           FontFamily="Consolas"
+                                           FontWeight="Bold"
+                                            Foreground="{ThemeResource FontColor}"/>
+                                        <TextBlock Grid.Row="1" Margin=" 5 1"
+                                           VerticalAlignment="Center"
+                                           Text="{Binding Author.UserName}"
+                                           FontSize="10"
+                                            Foreground="{ThemeResource FontColor}"/>
+                                    </Grid>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView Margin="0" Padding="0"
+                          ItemsSource="{Binding Path=MovieOC}"
+                          IsItemClickEnabled="True" 
+                          ItemClick="ListView_ItemClick">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border Margin="3 2">
+                                <Grid Height="28">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Grid.Column="0" Padding="2">
+                                        <Image Source="ms-appx:///Assets/Res/search_movie.png"/>
+                                    </Border>
+                                    <Border Grid.Column="1">
+                                        <TextBlock Grid.Row="0" Margin="7 2"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Left"
+                                                   Text="{Binding Title}"
+                                                   FontSize="14"
+                                                   FontFamily="Consolas"
+                                                   FontWeight="Bold"
+                                                   Foreground="{ThemeResource FontColor}"/>
+                                    </Border>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView Margin="0" Padding="0"
+                          ItemsSource="{Binding Path=PeopleOC}"
+                          IsItemClickEnabled="True" 
+                          ItemClick="ListView_ItemClick">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border Margin="0 2">
+                                <Grid Height="68">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Grid.Column="0"
+                                             Margin="0 0 2 0" CornerRadius="90"
+                                             Width="50" Height="50"
+                                             VerticalAlignment="Center">
+                                        <Border.Background>
+                                            <ImageBrush ImageSource="{Binding WebUri}"/>
+                                        </Border.Background>
+                                    </Border>
+                                    <Grid Grid.Column="1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition />
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Grid.Row="0" Margin=" 5 2"
+                                           VerticalAlignment="Center"
+                                           Text="{Binding UserName}"
+                                           FontSize="14"
+                                           FontFamily="Consolas"
+                                           FontWeight="Bold"
+                                            Foreground="{ThemeResource FontColor}"/>
+                                        <TextBlock Grid.Row="1" Margin=" 5 1"
+                                           VerticalAlignment="Center"
+                                           Text="{Binding Desc}"
+                                           FontSize="10"
+                                            Foreground="{ThemeResource FontColor}"/>
+                                    </Grid>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Image Visibility="{Binding NoSearchResult}" Source="ms-appx:///Assets/Res/no_search_result.png"/>
+            </StackPanel>
         </StackPanel>
-        <ProgressRing Height="50" Width="50"
-                      VerticalAlignment="Center"
-                      IsActive="{Binding IsActive}"/>
     </Grid>
 </Page>
