--- a/Demo_Test/Articles.xaml
+++ b/Demo_Test/Articles.xaml
@@ -4,11 +4,10 @@
     xmlns:JiuYouAdUniversal="using:JiuYouAdUniversal"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Demo"
-    xmlns:adduplex="using:AdDuplex"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding ArticlesDataBinding,RelativeSource={RelativeSource Mode=Self}}">
+    DataContext="{Binding ArticlesDataBinding,RelativeSource={RelativeSource Mode=Self}}"><!--xmlns:adduplex="using:AdDuplex"-->
     <Page.Resources>
         <Storyboard x:Name="ForBorder" AutoReverse="False">
             <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" Duration="0:0:.8" BeginTime="0:0:0" EnableDependentAnimation="True" SpeedRatio=".8">
@@ -107,16 +106,15 @@
                                     </Button>
                                 </Grid>
                             </Border>
-
                         </Grid>
 
-                        <Border Margin="10 10 10 20" Padding="5">
+                        <!--<Border Margin="10 10 10 20" Padding="5">
                             <JiuYouAdUniversal:AdControl ApplicationKey="e3c602f86e5e70b351479eddf2d1efc8"
                                                      HorizontalAlignment="Left"
                                                      Margin="10 80 0 0"
                                                      VerticalAlignment="Top"
                                                      AdType="Banner"/>
-                        </Border>
+                        </Border>-->
                         <Border Height="10"></Border>
                     </StackPanel>
                 </Grid>
